# projet-info-1a

./: .gitignore  README.md  cleanDB.py  docker-compose.yml  dockerSetup.sh  launch.bat  launch.ps1  launch.sh  linuxSetupDocker.sh  projet.md  reunions.md  token admin.txt  winSetupDocker.bat
FakeFridge/: demoDataGeneration.py  generateDummyData.py
FridgeSide/: Cargo.toml
FridgeSide/src/: FileWatcher.rs  main.rs
ServerSide/: FlaskServer.py  __init__.py  auth.py  db.sqlite  deploy.sh  generated.html  grafana.py  influx.py  main.py  models.py  server.py  style.css  template.html  test.html  viz.py
ServerSide/dashboard-generation/: grafanalib-test.py  plotly-options.md  query.flux  query.txt  simple-query.flux
ServerSide/grafana-panels/: panel-1.json  panel-2.json
ServerSide/grafana_volume/: grafana-dashboard-3-data  grafana.db
ServerSide/grafana_volume/plugins/grafana-oncall-app/: MANIFEST.txt  module.js  plugin.json
ServerSide/templates/: base.html  dashboard.html  dashboard_tabler.html  login.html  profile.html  signup.html  visualization.html
TestData/21-01-01/: generated.txt
tauri/fridgewatcher/: package-lock.json  package.json
tauri/fridgewatcher/src/: index.html  main.js
tauri/fridgewatcher/src-tauri/: Cargo.toml  tauri.conf.json
tauri/fridgewatcher/src-tauri/src/: main.rs
