[package]
name = "FridgeSide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
notify = "4.0.0"
reqwest = {version= "0.11.17", features=["json"]}
serde = "1.0.162"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
